--- a/email-sent/index.html
+++ b/email-sent/index.html
@@ -9,7 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>Yard Sale</title>
+    <title>Document</title>
+    <style>
+        .form-container {
+            margin-top: 25px;
+        }
+
+    </style>
 </head>
 <body>
     <header>
@@ -37,20 +43,15 @@
         <div class="form-container">
             <img src="../logos/logo_yard_sale.svg" alt="logo" class="logo">
 
-            <h1 class="title">Create a new password</h1>
-            <p class="subtitle">Enter a new password for your account</p>
+            <h1 class="title">Email has been sent!</h1>
+            <p class="subtitle">Please check your inbox for instructions on how to reset the password</p>
 
-            <form action="#" class="form">
-                <label for="password" class="label">Password</label>
-                <input type="password" name="" id="password" placeholder="*********" class="input input-password">
+            <picture><img src="../icons/email.svg" alt="email" class="email"></picture>
 
-                <label for="new-password" class="label">Re-enter password</label>
-                <input type="password" name="" id="new-password" placeholder="*********" class="input input-password">
-                
+            <button class="primary-button">Login</button>
 
-                <input type="submit" value="Confirm" class="primary-button login-button">
+            <p class="resend">Didn´t recive the email? <a href="#">Resend</a></p>
 
-            </form>
         </div>
     </main>
 </body>
