Maquetacion y estilos de edit-account

--- a/edit-account/index.html
+++ b/edit-account/index.html
@@ -25,6 +25,7 @@
             .form div {
                 height: auto;
             }
+
         }
     </style>
 </head>
@@ -47,16 +48,16 @@
             <form action="#" class="form">
                 <div>
                     <label for="name" class="label">Name</label>
-                    <input type="text" class="input name" placeholder="Camila Yokoo">
+                    <p class="value">Camila Yokoo</p>
 
                     <label for="email" class="label">Email</label>
-                    <input type="email" class="input email" placeholder="camilayokoo@gmail.com">
+                    <p class="value">camilayokoo@gmail.com</p>
 
                     <label for="password" class="label">Password</label>
-                    <input type="password" class="input pasword" placeholder="********">
+                    <p class="value">********</p>
                 </div>
                 <div>
-                    <input type="submit" value="Create" class="primary-button create">
+                    <input type="submit" value="Edit" class="secondary-button edit">
                 </div>
             </form>
         </section>
