--- a/login/index.html
+++ b/login/index.html
@@ -15,6 +15,8 @@
             position: relative;
         }
         .logo {
+            width: 206px;
+            height: 43px;
             margin-bottom: 55px;
         }
     </style>
@@ -46,19 +48,23 @@
             <img src="../logos/logo_yard_sale.svg" alt="logo" class="logo">
 
             <form action="#" class="form">
-                <label for="" class="label">Email address</label>
-                <input type="email" class="input input-email" placeholder="camiloyokoo@gmail.com">
+                <div>
+                    <label for="" class="label">Email address</label>
+                    <input type="email" class="input input-email" placeholder="camiloyokoo@gmail.com">
 
-                <label for="" class="label">Password</label>
-                <input type="password" class="input input-password" placeholder="*********">
+                    <label for="" class="label">Password</label>
+                    <input type="password" class="input input-password" placeholder="*********">
 
-                <input type="submit" value="Login" class="primary-button login-button">
+                    <input type="submit" value="Login" class="primary-button login-button">
 
-                <a href="#" class="forgot">Forgot my password</a>
+                    <a href="#" class="forgot">Forgot my password</a>
+                </div>
+                
+                <div>
+                    <button class="secondary-button sing-up">Sing up</button>
+                </div>
                 
             </form>
-
-                <button class="secondary-button sing-up">Sing up</button>
         </section>
     </main>
 </body>
